# se_engine

./: .gitignore  Prepositions_Dictionary.cpp  Prepositions_Dictionary.h  README.md  Statistics.ods  Ya vs G.xls  Yandex_requester.cpp  Yandex_requester.h  a.out  en_prepositions_list.txt  en_prepositions_stat.txt  exe  exec  incorrect_en_only.txt  log.txt  log_correct.txt  log_incorrect.txt  main.cpp  makefile  notes.txt  notes.txt.save  prep_stat_req.cpp  prepositions_list.txt  prepositions_stat.txt  prepositions_stat_found_sort.txt  prepositions_stat_lexic_sort.txt  req_sender.cpp  req_sender.h  ru_prepositions_list.txt  run.sh  run_dynamic_context_dep.sh  run_fixed.sh  run_fixed_context_dep.sh  se_engine.cpp  se_engine.h  simple_test.xml  small_text.txt  small_text_correct.txt  test.cpp  the_smallest_text_correct.txt  (+7 more)
Prepositions_Dictionary/: Prepositions_Dictionary.cpp  Prepositions_Dictionary.h  exec  main.cpp  makefile  prepositions_list.txt  test.txt
backup/: main.cpp  se_engine.h
calc_aver/: main.cpp
curl_test/: main.cpp  makefile  req_sender.cpp  req_sender.h
expat_test/: expat_exec  expat_test.cpp  expat_test.cpp~  expat_test_2.cpp  simple_xml_test.xml  test.xml
src/: CMakeLists.txt  logger.cpp  logger.hpp  main.cpp  prepositions_dictionary.cpp  prepositions_dictionary.hpp  request_sender.cpp  request_sender.hpp  text_analyzer.cpp  text_analyzer.hpp  text_analyzer_ru.cpp  text_analyzer_ru.hpp  xml_parser.cpp  xml_parser.hpp  yandex_requester.cpp  yandex_requester.hpp
test/: makefile  text_analyzer_unittest.cpp
test_src/: test_notes.txt  (+1 more)
(+99 files in other folders)
